# sonu

./: .cursorrules  .gitignore  .gitmodules  ACKNOWLEDGMENTS.md  ARCHITECTURE.md  AUTOMATION_SETUP_COMPLETE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_CONTEXT.md  DEVELOPMENT_GUIDE.md  INSTALL.md  LEGACY_FILES_README.md  LICENSE  MIGRATION_TO_FASTER_WHISPER.md  MULTI_AGENT_ORCHESTRATION.md  MULTI_AGENT_SETUP.md  PLATFORM_BUILDS.md  PROJECT_STRUCTURE.md  README.md  REALTIME_TESTING_GUIDE.md  SETUP_COMPLETE.md  SHOWCASE.md  TESTING_SUMMARY.md  VERSION.md  VERSION_4_PLAN.md  main.js  package.json  preload.js  run_sonu.bat  whisper_service.py
.cursor/agents/: desktop-agent.md  (+1 more)
.github/: SHOWCASE_RECORD.md
apps/mobile/android/app/: CMakeLists.txt  build.gradle
apps/mobile/android/app/src/androidTest/java/com/sonu/: WhisperServiceTest.java
apps/mobile/android/app/src/main/: AndroidManifest.xml
apps/mobile/android/app/src/main/cpp/: whisper-jni.cpp
apps/mobile/android/app/src/main/java/com/sonu/: AudioRecorder.java  MainActivity.java  ModelManager.java  WhisperService.java
apps/mobile/android/app/src/main/res/layout/: activity_main.xml
apps/mobile/android/app/src/main/res/values/: strings.xml  themes.xml
docs/: DEVELOPMENT.md  MOBILE_ROADMAP.md  README.md  V3_OPTIMIZATION_SUMMARY.md  V4_MIGRATION_ANALYSIS.md  VERSIONING.md
logs/: solobuilder_progress.md
screenshots/: README.md
scripts/: generate-banner.js  take-screenshots.md
tests/: jest-e2e.json  jest-integration.json  jest-unit.json
tools/: fix_readme_assets.js  fix_readme_assets.report.txt
(+134 files in other folders)
